# qa_guru_python_07_18

./: README.md  pyproject.toml
